# LPYC_TTS

./: .gitignore  LICENSE  README.md  a.json  aa.json  ae.json  au.json  b.json  c.json  d.json  e.json  ee.json  f.json  g.json  h.json  i.json  j.json  k.json  l.json  m.json  n.json  ng.json  o.json  oo.json  p.json  phonemes.json  phonemes.txt  pyproject.toml  r.json  s.json  t.json  th.json  thh.json  u.json  uu.json  v.json  w.json  y.json  z.json
lpyc_tts_shotgunllama/: __init__.py
lpyc_tts_shotgunllama/analyzer/: analyze.py  player.py
lpyc_tts_shotgunllama/player/: __init__.py  phoneme.py
tests/: test_analyze.py
vocoder/: analyze.py  lpc.py  phoneme.py  player.py  windows.py
