[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lpyc_tts_shotgunllama"
version = "0.0.2"
authors = [
  { name="Yaakov Schectman", email="yaakov.schectman@gmail.com" },
]
description = "Speech synthesis, LPC models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
